# CompareSet

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CompareSet.App.pyproj  CompareSet.sln  DEV_NOTES.md  INSTRUCOES_DE_EMPACOTAMENTO.txt  LICENSE  LICENSE_EN.txt  LICENSE_PT.txt  MANIFEST.in  README.md  README_recolor_inplace.md  TESTE_LOCAL_BEFORE_PACOTE.txt  access_control.py  app.py  app_qt.py  auto_updater.py  backend.py  build_package.py  cli.py  comparador.py  compare7_gui.py  compare_engine.py  compare_set_gui.py  compareset_app.py  compareset_dev_launcher.py  compareset_engine.py  compareset_env.py  compareset_mvp.py  config_env.py  connection_monitor.py  dev_settings.json  developer_layout_designer.py  developer_tools_dialog.py  dll_loader.py  export terminal.txt  frontend.py  frontend.spec  (+21 more)
CompareSetViewer/: .npmrc  ControlManifest.Input.xml  README.md  index.ts  package.json  pcfconfig.json  tsconfig.json
Images/: Icon - License.ppm
PySide6/: __init__.py
assets/: style.qss
config/: allowed_users.json
docs/: ARCHITECTURE.md  faq.md  theme_customization.md
fitz/: __init__.py
frontend/: package.json  vite.config.ts
output/: .gitkeep
resources/: config.json
tests/: test_auth.py  test_build_package.py  test_char_level_diff.py  test_comparador.py  test_compare_multiple.py  test_compare_pdfs.py  test_diff.py  test_dll_loader.py  test_extract_bboxes.py  test_ignore_flags.py  test_integration.py  test_invalid_dimensions.py  test_iou.py  test_moved_pairs.py  test_overlay.py  test_overlay_option.py  test_pdf_diff.py  test_ui_loading.py  (+9 more)
(+67 files in other folders)
