[project]
name = "compareset"
version = "0.2.1-beta"
description = "Vector-based PDF comparison tool"
readme = "README.md"
requires-python = ">=3.8"
include-package-data = true
dependencies = [
    "PyMuPDF>=1.22",
    "PySide6",
    "requests",
    "python-dotenv",
    "pyarmor",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"compareset" = [
    "ui/*.ui",
]
"" = [
    "assets/**",
    "assets/*.qss",
]
