[project]
name = "compareset"
version = "0.2.1-beta"
description = "Vector-based PDF comparison tool"
readme = "README.md"
requires-python = ">=3.8"
include-package-data = true
dependencies = [
    "PyMuPDF>=1.23",
    "opencv-python>=4.8",
    "numpy>=1.26",
    "scikit-image>=0.22",
    "click>=8.1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"compareset" = []
